# graft

./: .bazelrc  BUILD  MODULE.bazel  go.mod
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/workflows/: build-and-test-bindings.yml  integrate-nightly-changes.yml  update-bindings.sh  update-org_tensorflow-workspace.sh
tensorflow/core/example/example_parser_configuration_go_proto/: BUILD  example_parser_configuration.pb.go
tensorflow/core/example/example_protos_go_proto/: BUILD  example.pb.go  feature.pb.go
tensorflow/core/framework/allocation_description_go_proto/: BUILD  allocation_description.pb.go
tensorflow/core/framework/api_def_go_proto/: BUILD  api_def.pb.go
tensorflow/core/framework/attr_value_go_proto/: BUILD  attr_value.pb.go
tensorflow/core/framework/cost_graph_go_proto/: BUILD  cost_graph.pb.go
tensorflow/core/framework/dataset_go_proto/: BUILD  dataset.pb.go
tensorflow/core/framework/dataset_metadata_go_proto/: BUILD  dataset_metadata.pb.go
tensorflow/core/framework/dataset_options_go_proto/: BUILD  dataset_options.pb.go
tensorflow/core/framework/device_attributes_go_proto/: BUILD  device_attributes.pb.go
tensorflow/core/framework/full_type_go_proto/: BUILD  full_type.pb.go
tensorflow/core/framework/function_go_proto/: BUILD  function.pb.go
tensorflow/core/framework/graph_debug_info_proto/: BUILD  graph_debug_info.pb.go
tensorflow/op/: wrappers.go
tools/build_defs/repo/: http.bzl  http.md
tools/conditions/: BUILD
tools/genop/: BUILD
tools/genop/internal/: BUILD
tools/genproto/: BUILD
(+103 files in other folders)
